[package]
name = "chrome-bookmarks-exporter"
version = "0.1.0"
edition = "2021"
description = "A simple tool to export chrome bookmarks in a compatible format with entreprise policies"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
envmnt = "0.10.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
